--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,9 @@ programista
 Roman Krzystyniak <Ron_K (at) tlen (dot) pl>
 dokumentacja projektu, opiekun wersji polskiej
 
+Pawe³ P³uciennik <pawel_p (at) kadu (dot) net>
+programista
+
 
  Autorzy Kadu - ludzie nie wspieraj±cy ju¿ aktywnie projektu
 =============================================================
