--- a/ChangeLog
+++ b/ChangeLog
@@ -96,6 +96,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   jak do tej pory do .../share/locale (mast3r)
 * poprawki w debian/ dotycz±ce poprawek z miejscem instalacji
   niektórych plików kadu (mast3r)
+* ma³e poprawki w kodzie dymków i kodzie korzystaj±cym z dymków (mast3r)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
