opcja Voice w instalatorze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1479 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -97,7 +97,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki w debian/ dotycz±ce poprawek z miejscem instalacji
   niektórych plików kadu (mast3r)
 * ma³e poprawki w kodzie dymków i kodzie korzystaj±cym z dymków (mast3r)
-
+* opcja Voice w instalatorze Instaluj
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
   (klasa HtmlDocument) i wy³awiania emotów i url-i. Naprawione
