prawy klik na dymku nie powoduje juz seg faulta
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1480 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -98,6 +98,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   niektórych plików kadu (mast3r)
 * ma³e poprawki w kodzie dymków i kodzie korzystaj±cym z dymków (mast3r)
 * opcja Voice w instalatorze Instaluj
+* prawy klik na dymku - nie powinien juz powodowaæ seg faulta (mast3r)
+
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
   (klasa HtmlDocument) i wy³awiania emotów i url-i. Naprawione
