przy zapisie listy kontaktow lista ignorowanych jest czyszczona, a przy laczeniu nie jest czyszczona
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1492 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -102,6 +102,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   dymków, nie wiem jeszcze tylko jak to siê zachowa na QT 3.0.x (mast3r)
 * mo¿liwo¶æ z³±czenia posiadanej listy kontaktów z importowan± list±
   kontaktów (demsik/chilek)
+* import: przy zapisie listy kontaktów lista ignorowanych jest czyszczona,
+  a przy³±czeniu nie jest czyszczona (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
