Doc juz tylko online
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1523 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Kadu, klient Gadu-Gadu dla KDE, wersja 0.3.3 (lub nowsza)
 
 +++ WYMAGANIA
  * Qt-3.0.x (pisano na 3.0.4)
- * szczegó³y w pliku /doc/install.html
+ * szczegó³y w pomocy online http://kadu.net/install.html
  
 +++ FICZERSY
  * status: offline, online, away, invisible
