--- a/ChangeLog
+++ b/ChangeLog
@@ -115,6 +115,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   opcja Pomoc zawsze otwiera dokumentacjê z kadu.net (adrian)
 * emotki sa niewrazliwe na wielkosc liter 
   (<ok>, <oK>, <OK> to ta sama ikonka) (pawel_p)
+* make install kopiuje do $PREFIX/share/kadu pliki AUTHORS, ChangeLog,
+  COPYING, HISTORY, README, THANKS na potrzeby nowego okna About (adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
