gdy mamy pusta liste kontaktow to sendUserlist() przekazuje NULL do gg_notify*()
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1536 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -118,6 +118,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * make install kopiuje do $PREFIX/share/kadu pliki AUTHORS, ChangeLog,
   COPYING, HISTORY, README, THANKS na potrzeby nowego okna About (adrian)
 * przebudowane okno "O programie" (chilek)
+* libgadu z 03.11.2003 (chilek)
+* gdy mamy pust± listê kontaktów to sendUserlist() przekazuje NULL do
+  gg_notify*() (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
