--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@ lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
++++ wersja 0.3.6-cvs
+
+
 +++ wersja 0.3.5-cvs
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
   kilku zak³adek (pawel_p/adrian)
