--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 +++ wersja 0.3.6-cvs
 
 
-+++ wersja 0.3.5-cvs
++++ wersja 0.3.5
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
   kilku zak³adek (pawel_p/adrian)
 * drobne porz±dki w oknie konfiguracji - nowa zak³adka SMS,
