--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,8 @@ podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.3.6-cvs
-
+* je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶ wiadomo¶æ
+  konferencyjn±, to otwiera siê okno konferencji (chilek)
 
 +++ wersja 0.3.5
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
