--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w userboxie  i otrzymali¶my od niego jak±¶ wiadomo¶æ, to wiadomo¶æ zostanie
   umieszczona w otwieranym oknie rozmowy (chilek)
 * wywalenie starych(qt2?) headers z chat.h i kadu.h (mast3r)
+* poprawka statycznego linkowania libgadu (adrian)
 
 +++ wersja 0.3.5
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
