"Change password" => "Change password/email"
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1561 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   poprawiono wysylanie smsow do ideii (pawel_p)
 * dodano pole kontaktu oraz podpisu w oknie wysylania smsow (pawel_p)
 * poprawna obs³uga UseTLS (chilek)
+* "Change password" => "Change password/email" (chilek)
 
 +++ wersja 0.3.5 (05.11.2003)
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
