--- a/ChangeLog
+++ b/ChangeLog
@@ -18,8 +18,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * "Change password" => "Change password/email" (chilek)
 * "Default status" w konfiguracji powinien t³umaczyæ siê na inne jêzyki (chilek)
 * dodane t³umaczenie na jêzyk niemiecki (Robert "kolatzek"/chilek)
-* usuniêcie optymalizacji -Os (chilek zepsu³/adrian naprawi³)
+* usuniêcie optymalizacji -Os (adrian i master zepsuli na pocz±tku/chilek zepsu³/adrian naprawi³)
 * adres zaczynaj±cy siê od https:// te¿ jest "³apany" jako link (mast3r)
+* poprawiony komunikat "wiadomo¶æ za d³uga" (michal/chilek)
 
 +++ wersja 0.3.5 (05.11.2003)
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
