--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêcie optymalizacji -Os (adrian i master zepsuli na pocz±tku/chilek zepsu³/adrian naprawi³)
 * adres zaczynaj±cy siê od https:// te¿ jest "³apany" jako link (mast3r)
 * poprawiony komunikat "wiadomo¶æ za d³uga" (michal/chilek)
+* dodane t³umaczenie qt_de (chilek)
 
 +++ wersja 0.3.5 (05.11.2003)
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
