--- a/ChangeLog
+++ b/ChangeLog
@@ -24,7 +24,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodane t³umaczenie qt_de (chilek)
 * zablokowane wykorzystanie niedzia³aj±cego TLS (chilek)
 * w przypadku, gdy mamy pusty email w bazie GG, kadu przy b³êdzie po³±czenia
-  z serwerem GG wy¶wietla stosowny komunikat (chilek)
+  z serwerem GG wy¶wietla stosowny komunikat (oskar/chilek)
 
 +++ wersja 0.3.5 (05.11.2003)
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
