--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zablokowane wykorzystanie niedzia³aj±cego TLS (chilek)
 * w przypadku, gdy mamy pusty email w bazie GG, kadu przy b³êdzie po³±czenia
   z serwerem GG wy¶wietla stosowny komunikat (oskar/chilek)
+* pierwszy krok ku integracji z Mozill± - instalowany automatycznie
+  skrypcik kadu-mozilla, docelowo chcia³bym zrobiæ wybór w konfiguracji
+  wybór przegl±darki Konqueror/Mozilla/Inna (adrian)
 
 +++ wersja 0.3.5 (05.11.2003)
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
