--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w przypadku, gdy mamy pusty email w bazie GG, kadu przy b³êdzie po³±czenia
   z serwerem GG wy¶wietla stosowny komunikat (oskar/chilek)
 * pierwszy krok ku integracji z Mozill± - instalowany automatycznie
-  skrypcik kadu-mozilla, docelowo chcia³bym zrobiæ wybór w konfiguracji
+  skrypcik kadu-mozilla, docelowo chcia³bym zrobiæ w konfiguracji
   wybór przegl±darki Konqueror/Mozilla/Inna (adrian)
 
 +++ wersja 0.3.5 (05.11.2003)
