--- a/AUTHORS
+++ b/AUTHORS
@@ -12,7 +12,7 @@ Dariusz Jagodzik <mast3r (at) kadu (dot) net>
 programista
 
 Roman Krzystyniak <Ron_K (at) tlen (dot) pl>
-dokumentacja projektu, opiekun wersji polskiej
+dokumentacja projektu, opiekun t³umaczeñ
 
 Pawe³ P³uciennik <pawel_p (at) kadu (dot) net>
 programista
@@ -23,3 +23,9 @@ programista
 
 Tomasz Jarzynka <tomee (at) cpi (dot) pl>
 twórca projektu, programista, grafik
+
+ T³umacze
+=============================================================
+
+Adrian Smarzewski & Roman Krzystyniak - wersja polska
+Robert Kolazek - wersja niemiecka
