--- a/AUTHORS
+++ b/AUTHORS
@@ -29,3 +29,4 @@ twórca projektu, programista, grafik
 
 Adrian Smarzewski & Roman Krzystyniak - wersja polska
 Robert Kolazek - wersja niemiecka
+Piotr Jedrysik - wersja w³oska
