--- a/AUTHORS
+++ b/AUTHORS
@@ -24,9 +24,9 @@ programista
 Tomasz Jarzynka <tomee (at) cpi (dot) pl>
 twórca projektu, programista, grafik
 
- T³umacze
+ Lokalizacje Kadu
 =============================================================
 
-Adrian Smarzewski & Roman Krzystyniak - wersja polska
-Robert Kolazek - wersja niemiecka
+Adrian Smarzewski, Roman Krzystyniak - wersja polska
+Robert Kolatzek - wersja niemiecka
 Piotr Jedrysik - wersja w³oska
