doc na kadu.net
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1602 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/FAQ
+++ b/FAQ
@@ -1,2 +1,2 @@
-Naj¶wie¿sze informacje znajduj± siê w pliku doc/faq.html
+Naj¶wie¿sze informacje znajduj± siê na stronie http://kadu.net  w dziale POMOC
 
