--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 +++ wersha 0.3.7-cvs
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
 * okno konfiguracji: mo¿liwo¶æ wy³±czenia zmian statusu w historii (demsik/chilek)
+* porz±dki w configure + dodane wykrywanie nag³ówków XFree,
+  je¶li co¶ zepsu³em to krzyczcie :P (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
