--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   natomiast opcje wyswietlaja sie po prawej stronie okna (pawel_p)
 * w trakcie ³±czenia siê z sieci± gg po 3 sekundach nieaktywno¶ci próbujemy ³±czyæ siê
   od nowa (chilek)
+* prace nad wydzieleniem ChatManager'a zawierajacego wszystkie operacje
+  na oknach Chat. spore porzadki w kodzie. nie zabijacie jesli zepsulem ;)
+  (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
