--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w ktorej beda wszystkie funkcje specyficzne dla gg (adrian)
 * eksperymentalna obs³uga loadable modules. nowa opcja --enable-modules
   w configure (adrian)
+* poprawka kompilacji pod FreeBSD 4.9 (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
