--- a/ChangeLog
+++ b/ChangeLog
@@ -22,7 +22,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w ktorej beda wszystkie funkcje specyficzne dla gg (adrian)
 * eksperymentalna obs³uga loadable modules. nowa opcja --enable-modules
   w configure (adrian)
-* poprawka kompilacji pod FreeBSD 4.9 (adrian)
+* poprawka kompilacji pod FreeBSD 4.9 (paramah/adrian)
+* drastyczne uproszczenie wysylania wiadomosci w Chat. mechanizm w wiekszosci
+  przesuniety do klasy GaduProtocol w postaci wygodnej funkcji sendMessage,
+  ktora moze byc uzywana np. przez zewnetrzne moduly (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
