--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mozliwosc zaladowania kilku modulow rownoczesnie, okienko dialogowe
   z dwoma listami: modulow dostepnych i zaladowanych i mozliwosc zaladowania/
   wyladowania modulu za pomoca podwojnego klikniecia (adrian)
+* dwa przykladowe moduly kompiluja sie i instaluja automatycznie jesli uzyjemy
+  opcji --enable-modules. oprocz tego pare poprawek i... to juz naprawde
+  zaczyna sensownie dzialac ;) (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
