--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dwa przykladowe moduly kompiluja sie i instaluja automatycznie jesli uzyjemy
   opcji --enable-modules. oprocz tego pare poprawek i... to juz naprawde
   zaczyna sensownie dzialac ;) (adrian)
+* poprawka dzialania przy podwojnym kliku na osobe bez numeru gg -
+  teraz otwiera okno sms zamiast chat z dziwnym numerem (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
