--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   tworzenia nowych menu w oknie i nowych opcji w menu "Kadu" (googie/adrian)
 * kadu nie wysypuje sie przy wysylaniu sms'ow do plusa (pawel_p)
 * poprawiono ilosc cytowania linijek rozmowy (pawel_p)
+* porzadki w kodzie dodawania userow zwyklych i anonimowych. wszystko
+  w funkcjach UserList::addUser() i UserList::addAnonymous() (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
