--- a/ChangeLog
+++ b/ChangeLog
@@ -51,6 +51,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiono ilosc cytowania linijek rozmowy (pawel_p)
 * porzadki w kodzie dodawania userow zwyklych i anonimowych. wszystko
   w funkcjach UserList::addUser() i UserList::addAnonymous() (adrian)
+* ladniejsze, podrasowane okienko zarzadzania modulami (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
