--- a/ChangeLog
+++ b/ChangeLog
@@ -52,11 +52,14 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * porzadki w kodzie dodawania userow zwyklych i anonimowych. wszystko
   w funkcjach UserList::addUser() i UserList::addAnonymous() (adrian)
 * ladniejsze, podrasowane okienko zarzadzania modulami (adrian)
-* poprawione ustawianie statusu "tylko dla znajomych w oknie konfiguracji (pawel_p)
+* poprawione ustawianie statusu "tylko dla znajomych"
+  w oknie konfiguracji (pawel_p)
 * przy zmianie czcionki w oknie rozmowy, rozmiar czcionki zostaje taki jaki byl
   wybrany w poprzedniej czcionce (pawel_p)
-* dodany % sciagnietego pliku (na pasku zadan), poprawiony segfault przy zamknieciu
-  okna (transferu pliku) poprzez "ESC" (pawel_p)
+* dodany % sciagnietego pliku (na pasku zadan), poprawiony segfault przy
+  zamknieciu okna (transferu pliku) poprzez "ESC" (pawel_p)
+* bledy przy ladowaniu modulu pokazywane sa
+  jako messagebox a nie na konsoli  (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
