--- a/ChangeLog
+++ b/ChangeLog
@@ -60,6 +60,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   zamknieciu okna (transferu pliku) poprzez "ESC" (pawel_p)
 * bledy przy ladowaniu modulu pokazywane sa
   jako messagebox a nie na konsoli  (adrian)
+* uruchomione moduly sa zapamietywane w pliku kadu.conf i uruchamiane
+  pomownie po restarcie kadu (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
