--- a/ChangeLog
+++ b/ChangeLog
@@ -62,6 +62,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   jako messagebox a nie na konsoli  (adrian)
 * uruchomione moduly sa zapamietywane w pliku kadu.conf i uruchamiane
   pomownie po restarcie kadu (adrian)
+* porzadki w kodzie, rozmieszczenie zmiennych globalnych z kadu.cpp/h
+  w innych, bardziej odpowiednich plikach (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
