--- a/ChangeLog
+++ b/ChangeLog
@@ -65,6 +65,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * porzadki w kodzie, rozmieszczenie zmiennych globalnych z kadu.cpp/h
   w innych, bardziej odpowiednich plikach (adrian)
 * poprawka ladowania modulow na niektorych systemach (adrian)
+* poprawka dodawania uzytkownikow do listy (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
