--- a/ChangeLog
+++ b/ChangeLog
@@ -66,6 +66,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w innych, bardziej odpowiednich plikach (adrian)
 * poprawka ladowania modulow na niektorych systemach (adrian)
 * poprawka dodawania uzytkownikow do listy (adrian)
+* usuniete zostaly niepotrzebne zmienne
+  dodano mozliwosc wybierania zestawow dzwiekow (katalogi z dzwiekami 
+  musza zawierac plik "sound.conf" aby zestaw zostal wykryty)
+  mozna dodawac katalogi niestandardowe (czyli nie $PREFIX/kadu/themes/)
+  zmieniony wyglad zakladki "sounds" (pawel_p)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
