--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   musza zawierac plik "sound.conf" aby zestaw zostal wykryty)
   mozna dodawac katalogi niestandardowe (czyli nie $PREFIX/kadu/themes/)
   zmieniony wyglad zakladki "sounds" (pawel_p)
+* poprawiony segfault przy wybieraniu katalogu w ktorym nie ma zestawu dzwiekow
+  oraz poprawka w oknie wybierania sciezek (ciuciu/pawel_p)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
