--- a/ChangeLog
+++ b/ChangeLog
@@ -81,6 +81,12 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   generowany plik ".so" ma nazwe zgodna z nazwa katalogu modulu (adrian)
 * w katalogu $PREFIX/share/kadu/themes/sounds/default instalowany jest
   domyslny zestaw dzwiekow skladajacy sie tylko z msg.wav (adrian)
+* configure wspiera wykrywanie bibliotek i naglowkow potrzebnych modulom.
+  w pliku "spec" modulu mozemy okreslic: MODULE_LIBS - lista potrzebnych
+  bibliotek, np. "artsc". MODULE_INCLUDES - lista potrzebnych naglowkow,
+  np. "artsc.h", MODULE_LIBS_PATH i MODULE_INCLUDES_PATH - listy dodatkowych
+  katalogow w ktorych configure ma szukac bibliotek i naglowkow. potrzebne
+  do kompilacji modulu argumenty -I -L i -l dodawane sa automatycznie.
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
