--- a/ChangeLog
+++ b/ChangeLog
@@ -89,8 +89,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano mozliwosc wykonywania operacji na pasku narzedziowym
   (API: addToolButton, addToolButtonSeparator, getToolButton, toolBar) (pawel_p)
 * zestawy dzwiekowe sa szukane katalogach "$PREFIX/kadu/themes/sounds" 
-    i ".gg/sounds" oraz dodanych przez uzytkownika, domyslnym zestawem dzwiekowym 
-    jest "default" (pawel_p)
+  i ".gg/sounds" oraz dodanych przez uzytkownika, domyslnym zestawem dzwiekowym 
+  jest "default" (pawel_p)
+* opcja "zarzadca modulow" nie otwiera drugiego okna, jesli jedno juz jest
+  otwarte, tylko uaktywnie to poprzednie (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
