--- a/ChangeLog
+++ b/ChangeLog
@@ -93,6 +93,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   jest "default" (pawel_p)
 * opcja "zarzadca modulow" nie otwiera drugiego okna, jesli jedno juz jest
   otwarte, tylko uaktywnie to poprzednie (adrian)
+* poprawione zapisywanie sciezek do zestawow (nie dubluja sie)
+  aby odczytac plik z konfiguracja wystarczy "r" a nie "rw"  (pawel_p)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
