--- a/ChangeLog
+++ b/ChangeLog
@@ -98,6 +98,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki/rozbudowa modulu autoresponder przyslane przez Daniela Rode.
   prawidlowo dziala przy "tylko dla znajomych" i czyta plik autoresponder.conf.
   od dzisiaj Daniel jest oficjalnym opiekunem tego modulu (adrian)
+* drobne poprawki przy Makefile do modulow (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
