--- a/ChangeLog
+++ b/ChangeLog
@@ -97,10 +97,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   aby odczytac plik z konfiguracja wystarczy "r" a nie "rw"  (pawel_p)
 * poprawki/rozbudowa modulu autoresponder przyslane przez Daniela Rode.
   prawidlowo dziala przy "tylko dla znajomych" i czyta plik autoresponder.conf.
-  od dzisiaj Daniel jest oficjalnym opiekunem tego modulu (adrian)
+  od dzisiaj Daniel "uto" jest oficjalnym opiekunem tego modulu (adrian)
 * drobne poprawki przy Makefile do modulow (adrian)
 * poprawiony segfault, przy starcie kadu, zwiazany z zestawami 
   dzwiekowymi (mAR/pawel_p)
+* poprawka modulu autorespondera (uto)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
