--- a/ChangeLog
+++ b/ChangeLog
@@ -102,6 +102,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiony segfault, przy starcie kadu, zwiazany z zestawami 
   dzwiekowymi (mAR/pawel_p)
 * poprawka modulu autorespondera (uto)
+* poprawki przy Makefile do modulow - prawidlowo dziala "make clean"
+  i przekompilowuje tylko pliki .cpp ktore zmienialismy (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
